--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node src/server.js",
+    "start": "node src/server.ts",
     "start:local": "nodemon src/server.ts",
     "dev": "nodemon src/server.ts --inspect"
   },
